--- a/app/package.json
+++ b/app/package.json
@@ -4,6 +4,7 @@
   "devDependencies": {
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
+    "@types/styled-components": "^5.1.10",
     "html-webpack-plugin": "^5.3.2",
     "ts-loader": "^9.2.3",
     "typescript": "^4.3.4",
@@ -12,6 +13,8 @@
   },
   "dependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-is": "^17.0.2",
+    "styled-components": "^5.3.0"
   }
 }
