--- a/app/package.json
+++ b/app/package.json
@@ -5,6 +5,7 @@
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
     "@types/react-helmet": "^6.1.1",
+    "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.10",
     "html-webpack-plugin": "^5.3.2",
     "ts-loader": "^9.2.3",
@@ -17,6 +18,7 @@
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-is": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "styled-components": "^5.3.0"
   }
 }
