--- a/app/package.json
+++ b/app/package.json
@@ -2,6 +2,7 @@
   "name": "commonplace",
   "private": true,
   "devDependencies": {
+    "@types/lodash": "^4.14.170",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
     "@types/react-helmet": "^6.1.1",
@@ -14,6 +15,8 @@
     "webpack-cli": "^4.7.2"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
+    "polished": "^4.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
