--- a/app/package.json
+++ b/app/package.json
@@ -22,6 +22,7 @@
     "react-helmet": "^6.1.0",
     "react-is": "^17.0.2",
     "react-router-dom": "^5.2.0",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "styled-normalize": "^8.0.7"
   }
 }
