--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
     "lodash": "^4.17.21",
     "polished": "^4.1.3",
     "react": "^17.0.2",
+    "react-autosize-textarea": "^7.1.0",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-is": "^17.0.2",
