Implement a barebones Prosemirror editor and hook it up to React
Prosemirror seems like a really neat library of rich editor stuff. We hook
it up to React by giving it a Ref to render a view into apparently?

--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "outDir": "./dist/",
-    "strict": true,
+    "strict": false,
     "sourceMap": true,
     "noImplicitAny": false,
     "module": "es2020",
