--- a/app/package.json
+++ b/app/package.json
@@ -3,6 +3,10 @@
   "private": true,
   "devDependencies": {
     "@types/lodash": "^4.14.170",
+    "@types/prosemirror-model": "^1.13.0",
+    "@types/prosemirror-schema-basic": "^1.0.2",
+    "@types/prosemirror-state": "^1.2.6",
+    "@types/prosemirror-view": "^1.17.1",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
     "@types/react-helmet": "^6.1.1",
@@ -17,6 +21,10 @@
   "dependencies": {
     "lodash": "^4.17.21",
     "polished": "^4.1.3",
+    "prosemirror-model": "^1.14.2",
+    "prosemirror-schema-basic": "^1.1.2",
+    "prosemirror-state": "^1.3.4",
+    "prosemirror-view": "^1.18.8",
     "react": "^17.0.2",
     "react-autosize-textarea": "^7.1.0",
     "react-dom": "^17.0.2",
