--- a/app/package.json
+++ b/app/package.json
@@ -3,8 +3,10 @@
   "private": true,
   "devDependencies": {
     "@types/lodash": "^4.14.170",
+    "@types/prosemirror-commands": "^1.0.4",
+    "@types/prosemirror-inputrules": "^1.0.4",
+    "@types/prosemirror-keymap": "^1.0.4",
     "@types/prosemirror-model": "^1.13.0",
-    "@types/prosemirror-schema-basic": "^1.0.2",
     "@types/prosemirror-state": "^1.2.6",
     "@types/prosemirror-view": "^1.17.1",
     "@types/react": "^17.0.11",
@@ -21,8 +23,10 @@
   "dependencies": {
     "lodash": "^4.17.21",
     "polished": "^4.1.3",
+    "prosemirror-commands": "^1.1.10",
+    "prosemirror-inputrules": "^1.1.3",
+    "prosemirror-keymap": "^1.1.4",
     "prosemirror-model": "^1.14.2",
-    "prosemirror-schema-basic": "^1.1.2",
     "prosemirror-state": "^1.3.4",
     "prosemirror-view": "^1.18.8",
     "react": "^17.0.2",
