--- a/app/package.json
+++ b/app/package.json
@@ -7,6 +7,7 @@
     "@types/prosemirror-inputrules": "^1.0.4",
     "@types/prosemirror-keymap": "^1.0.4",
     "@types/prosemirror-model": "^1.13.0",
+    "@types/prosemirror-schema-list": "^1.0.3",
     "@types/prosemirror-state": "^1.2.6",
     "@types/prosemirror-view": "^1.17.1",
     "@types/react": "^17.0.11",
@@ -27,6 +28,7 @@
     "prosemirror-inputrules": "^1.1.3",
     "prosemirror-keymap": "^1.1.4",
     "prosemirror-model": "^1.14.2",
+    "prosemirror-schema-list": "^1.1.4",
     "prosemirror-state": "^1.3.4",
     "prosemirror-view": "^1.18.8",
     "react": "^17.0.2",
