--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
     "@types/prosemirror-model": "^1.13.0",
     "@types/prosemirror-schema-list": "^1.0.3",
     "@types/prosemirror-state": "^1.2.6",
+    "@types/prosemirror-tables": "^0.9.1",
     "@types/prosemirror-view": "^1.17.1",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
@@ -30,6 +31,8 @@
     "prosemirror-model": "^1.14.2",
     "prosemirror-schema-list": "^1.1.4",
     "prosemirror-state": "^1.3.4",
+    "prosemirror-tables": "^1.1.1",
+    "prosemirror-utils": "^0.9.6",
     "prosemirror-view": "^1.18.8",
     "react": "^17.0.2",
     "react-autosize-textarea": "^7.1.0",
