--- a/app/package.json
+++ b/app/package.json
@@ -4,6 +4,7 @@
   "devDependencies": {
     "@types/lodash": "^4.14.170",
     "@types/prosemirror-commands": "^1.0.4",
+    "@types/prosemirror-history": "^1.0.2",
     "@types/prosemirror-inputrules": "^1.0.4",
     "@types/prosemirror-keymap": "^1.0.4",
     "@types/prosemirror-model": "^1.13.0",
@@ -26,6 +27,7 @@
     "lodash": "^4.17.21",
     "polished": "^4.1.3",
     "prosemirror-commands": "^1.1.10",
+    "prosemirror-history": "^1.1.3",
     "prosemirror-inputrules": "^1.1.3",
     "prosemirror-keymap": "^1.1.4",
     "prosemirror-model": "^1.14.2",
