--- a/app/package.json
+++ b/app/package.json
@@ -4,6 +4,7 @@
   "devDependencies": {
     "@types/lodash": "^4.14.170",
     "@types/prosemirror-commands": "^1.0.4",
+    "@types/prosemirror-gapcursor": "^1.0.3",
     "@types/prosemirror-history": "^1.0.2",
     "@types/prosemirror-inputrules": "^1.0.4",
     "@types/prosemirror-keymap": "^1.0.4",
@@ -27,6 +28,7 @@
     "lodash": "^4.17.21",
     "polished": "^4.1.3",
     "prosemirror-commands": "^1.1.10",
+    "prosemirror-gapcursor": "^1.1.5",
     "prosemirror-history": "^1.1.3",
     "prosemirror-inputrules": "^1.1.3",
     "prosemirror-keymap": "^1.1.4",
