--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -7,7 +7,7 @@ license = "MPL-2.0"
 
 [dependencies]
 rocket = { version = "0.5.0-rc.1", features = ["json"] }
-chrono = "0.4"
+commonplace = { path = "../commonplace" }
 serde = "1"
 serde_cbor = "0.11"
 sled = "0.34"
