--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
     "@types/react-helmet": "^6.1.1",
+    "@types/react-portal": "^4.0.3",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.10",
     "html-webpack-plugin": "^5.3.2",
@@ -43,6 +44,7 @@
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-is": "^17.0.2",
+    "react-portal": "^4.2.1",
     "react-router-dom": "^5.2.0",
     "styled-components": "^5.3.0",
     "styled-normalize": "^8.0.7"
