--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -9,6 +9,6 @@ license = "MPL-2.0"
 rocket = { version = "0.5.0-rc.1", features = ["json"] }
 commonplace = { path = "../commonplace" }
 serde = "1"
-serde_cbor = "0.11"
+bincode = "1"
 sled = "0.34"
 tantivy = "0.15"
