--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -7,6 +7,7 @@ license = "MPL-2.0"
 
 [dependencies]
 rocket = { version = "0.5.0-rc.1", features = ["json"] }
+tokio = "1"
 commonplace = { path = "../commonplace" }
 serde = "1"
 bincode = "1"
