--- a/app/package.json
+++ b/app/package.json
@@ -2,51 +2,52 @@
   "name": "commonplace",
   "private": true,
   "devDependencies": {
-    "@types/lodash": "^4.14.170",
+    "@types/lodash": "^4.14.177",
     "@types/prosemirror-commands": "^1.0.4",
-    "@types/prosemirror-gapcursor": "^1.0.3",
-    "@types/prosemirror-history": "^1.0.2",
+    "@types/prosemirror-gapcursor": "^1.0.4",
+    "@types/prosemirror-history": "^1.0.3",
     "@types/prosemirror-inputrules": "^1.0.4",
     "@types/prosemirror-keymap": "^1.0.4",
-    "@types/prosemirror-model": "^1.13.0",
+    "@types/prosemirror-model": "^1.13.2",
     "@types/prosemirror-schema-list": "^1.0.3",
-    "@types/prosemirror-state": "^1.2.6",
-    "@types/prosemirror-view": "^1.17.1",
-    "@types/react": "^17.0.11",
-    "@types/react-dom": "^17.0.8",
-    "@types/react-helmet": "^6.1.1",
-    "@types/react-portal": "^4.0.3",
-    "@types/react-router-dom": "^5.1.7",
-    "@types/styled-components": "^5.1.10",
-    "html-webpack-plugin": "^5.3.2",
-    "ts-loader": "^9.2.3",
-    "typescript": "^4.3.4",
-    "webpack": "^5.41.1",
-    "webpack-cli": "^4.7.2",
-    "webpack-merge": "^5.8.0"
+    "@types/prosemirror-state": "^1.2.8",
+    "@types/prosemirror-view": "^1.19.2",
+    "@types/react": "^17.0.37",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-helmet": "^6.1.4",
+    "@types/react-portal": "^4.0.4",
+    "@types/react-router-dom": "^5.3.2",
+    "@types/styled-components": "^5.1.16",
+    "html-webpack-plugin": "^5.5.0",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.5.2",
+    "webpack": "^5.64.4",
+    "webpack-cli": "^4.9.1",
+    "webpack-merge": "^5.8.0",
+    "yarn-upgrade-all": "^0.5.4"
   },
   "dependencies": {
     "lodash": "^4.17.21",
     "polished": "^4.1.3",
-    "prosemirror-commands": "^1.1.10",
-    "prosemirror-gapcursor": "^1.1.5",
-    "prosemirror-history": "^1.1.3",
+    "prosemirror-commands": "^1.1.12",
+    "prosemirror-gapcursor": "^1.2.0",
+    "prosemirror-history": "^1.2.0",
     "prosemirror-inputrules": "^1.1.3",
-    "prosemirror-keymap": "^1.1.4",
-    "prosemirror-model": "^1.14.2",
-    "prosemirror-schema-list": "^1.1.4",
+    "prosemirror-keymap": "^1.1.5",
+    "prosemirror-model": "^1.15.0",
+    "prosemirror-schema-list": "^1.1.6",
     "prosemirror-state": "^1.3.4",
     "prosemirror-tables": "^1.1.1",
     "prosemirror-utils": "^0.9.6",
-    "prosemirror-view": "^1.18.8",
+    "prosemirror-view": "^1.23.3",
     "react": "^17.0.2",
     "react-autosize-textarea": "^7.1.0",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-is": "^17.0.2",
     "react-portal": "^4.2.1",
-    "react-router-dom": "^5.2.0",
-    "styled-components": "^5.3.0",
+    "react-router-dom": "^6.0.2",
+    "styled-components": "^5.3.3",
     "styled-normalize": "^8.0.7"
   }
 }
