--- a/app/package.json
+++ b/app/package.json
@@ -2,52 +2,51 @@
   "name": "commonplace",
   "private": true,
   "devDependencies": {
-    "@types/lodash": "^4.14.177",
-    "@types/prosemirror-commands": "^1.0.4",
-    "@types/prosemirror-gapcursor": "^1.0.4",
-    "@types/prosemirror-history": "^1.0.3",
-    "@types/prosemirror-inputrules": "^1.0.4",
-    "@types/prosemirror-keymap": "^1.0.4",
-    "@types/prosemirror-model": "^1.13.2",
-    "@types/prosemirror-schema-list": "^1.0.3",
-    "@types/prosemirror-state": "^1.2.8",
-    "@types/prosemirror-view": "^1.19.2",
-    "@types/react": "^17.0.37",
-    "@types/react-dom": "^17.0.11",
-    "@types/react-helmet": "^6.1.4",
+    "@types/lodash": "^4.14.191",
+    "@types/prosemirror-commands": "^1.3.0",
+    "@types/prosemirror-gapcursor": "^1.3.0",
+    "@types/prosemirror-history": "^1.3.0",
+    "@types/prosemirror-inputrules": "^1.2.0",
+    "@types/prosemirror-keymap": "^1.2.0",
+    "@types/prosemirror-model": "^1.17.0",
+    "@types/prosemirror-schema-list": "^1.2.0",
+    "@types/prosemirror-state": "^1.4.0",
+    "@types/prosemirror-view": "^1.24.0",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
+    "@types/react-helmet": "^6.1.6",
     "@types/react-portal": "^4.0.4",
-    "@types/react-router-dom": "^5.3.2",
-    "@types/styled-components": "^5.1.16",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/styled-components": "^5.1.26",
     "html-webpack-plugin": "^5.5.0",
-    "ts-loader": "^9.2.6",
-    "typescript": "^4.5.2",
-    "webpack": "^5.64.4",
-    "webpack-cli": "^4.9.1",
-    "webpack-merge": "^5.8.0",
-    "yarn-upgrade-all": "^0.5.4"
+    "ts-loader": "^9.4.2",
+    "typescript": "^4.9.4",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-merge": "^5.8.0"
   },
   "dependencies": {
     "lodash": "^4.17.21",
-    "polished": "^4.1.3",
-    "prosemirror-commands": "^1.1.12",
-    "prosemirror-gapcursor": "^1.2.0",
-    "prosemirror-history": "^1.2.0",
-    "prosemirror-inputrules": "^1.1.3",
-    "prosemirror-keymap": "^1.1.5",
-    "prosemirror-model": "^1.15.0",
-    "prosemirror-schema-list": "^1.1.6",
-    "prosemirror-state": "^1.3.4",
-    "prosemirror-tables": "^1.1.1",
+    "polished": "^4.2.2",
+    "prosemirror-commands": "^1.5.0",
+    "prosemirror-gapcursor": "^1.3.1",
+    "prosemirror-history": "^1.3.0",
+    "prosemirror-inputrules": "^1.2.0",
+    "prosemirror-keymap": "^1.2.0",
+    "prosemirror-model": "^1.19.0",
+    "prosemirror-schema-list": "^1.2.2",
+    "prosemirror-state": "^1.4.2",
+    "prosemirror-tables": "^1.3.2",
     "prosemirror-utils": "^0.9.6",
-    "prosemirror-view": "^1.23.3",
-    "react": "^17.0.2",
+    "prosemirror-view": "^1.30.0",
+    "react": "^18.2.0",
     "react-autosize-textarea": "^7.1.0",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "react-is": "^17.0.2",
-    "react-portal": "^4.2.1",
-    "react-router-dom": "^6.0.2",
-    "styled-components": "^5.3.3",
+    "react-is": "^18.2.0",
+    "react-portal": "^4.2.2",
+    "react-router-dom": "^6.7.0",
+    "styled-components": "^5.3.6",
     "styled-normalize": "^8.0.7"
   }
 }
