--- a/app/package.json
+++ b/app/package.json
@@ -26,6 +26,7 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "@curvenote/prosemirror-utils": "^1.0.5",
     "lodash": "^4.17.21",
     "polished": "^4.2.2",
     "prosemirror-commands": "^1.5.0",
@@ -37,7 +38,6 @@
     "prosemirror-schema-list": "^1.2.2",
     "prosemirror-state": "^1.4.2",
     "prosemirror-tables": "^1.3.2",
-    "prosemirror-utils": "^0.9.6",
     "prosemirror-view": "^1.30.0",
     "react": "^18.2.0",
     "react-autosize-textarea": "^7.1.0",
