--- a/app/package.json
+++ b/app/package.json
@@ -40,12 +40,12 @@
     "prosemirror-tables": "^1.3.2",
     "prosemirror-view": "^1.30.0",
     "react": "^18.2.0",
-    "react-autosize-textarea": "^7.1.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-is": "^18.2.0",
     "react-portal": "^4.2.2",
     "react-router-dom": "^6.7.0",
+    "react-textarea-autosize": "^8.4.0",
     "styled-components": "^5.3.6",
     "styled-normalize": "^8.0.7"
   }
