--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,2 +1,25 @@
-[workspace]
-members = ["xtask", "commonplace", "server"]
+[package]
+name = "commonplace"
+version = "0.1.0"
+authors = ["Isaac Woods"]
+edition = "2021"
+
+[lib]
+name = "commonplace"
+path = "src/lib.rs"
+
+[[bin]]
+name = "commonplace"
+path = "src/main.rs"
+
+[dependencies]
+axum = { version = "0.7.4", features = ["macros"] }
+tokio = { version = "1.36.0", features = ["full"] }
+tracing = "0.1"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+tower-http = { version = "0.5", features = ["full"] }
+serde = { version = "1.0.196", features = ["derive"] }
+serde_json = "1.0.113"
+chrono = "0.4.33"
+sled = "0.34.7"
+serde_cbor = "0.11.2"
