--- a/app/package.json
+++ b/app/package.json
@@ -3,15 +3,6 @@
   "private": true,
   "devDependencies": {
     "@types/lodash": "^4.14.191",
-    "@types/prosemirror-commands": "^1.3.0",
-    "@types/prosemirror-gapcursor": "^1.3.0",
-    "@types/prosemirror-history": "^1.3.0",
-    "@types/prosemirror-inputrules": "^1.2.0",
-    "@types/prosemirror-keymap": "^1.2.0",
-    "@types/prosemirror-model": "^1.17.0",
-    "@types/prosemirror-schema-list": "^1.2.0",
-    "@types/prosemirror-state": "^1.4.0",
-    "@types/prosemirror-view": "^1.24.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/react-helmet": "^6.1.6",
@@ -26,19 +17,11 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "@curvenote/prosemirror-utils": "^1.0.5",
+    "@tiptap/pm": "^2.1.7",
+    "@tiptap/react": "^2.1.7",
+    "@tiptap/starter-kit": "^2.1.7",
     "lodash": "^4.17.21",
     "polished": "^4.2.2",
-    "prosemirror-commands": "^1.5.0",
-    "prosemirror-gapcursor": "^1.3.1",
-    "prosemirror-history": "^1.3.0",
-    "prosemirror-inputrules": "^1.2.0",
-    "prosemirror-keymap": "^1.2.0",
-    "prosemirror-model": "^1.19.0",
-    "prosemirror-schema-list": "^1.2.2",
-    "prosemirror-state": "^1.4.2",
-    "prosemirror-tables": "^1.3.2",
-    "prosemirror-view": "^1.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
