--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@tiptap/extension-highlight": "^2.4.0",
+    "@tiptap/extension-image": "^2.4.0",
     "@tiptap/extension-link": "^2.4.0",
     "@tiptap/extension-placeholder": "^2.4.0",
     "@tiptap/extension-subscript": "^2.4.0",
