--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,9 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "@tiptap-pro/extension-details": "^2.9.3",
+    "@tiptap-pro/extension-details-content": "^2.9.3",
+    "@tiptap-pro/extension-details-summary": "^2.9.3",
     "@tiptap/extension-highlight": "^2.4.0",
     "@tiptap/extension-image": "^2.4.0",
     "@tiptap/extension-link": "^2.4.0",
