--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,6 +44,7 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          build-args: TIPTAP_PRO_TOKEN=${{ secrets.TIPTAP_PRO_TOKEN }}
 
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v1
